--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,10 @@ version: 1.0.0
 environment:
   sdk: ">=2.19.6 <3.0.0"
 
+dependencies:
+  shelf: ^1.4.0
+  shelf_web_socket: ^1.0.3
+
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
