--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   shelf: ^1.4.0
   shelf_web_socket: ^1.0.3
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   lints: ^2.0.0
